=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 v2.000 - In Development 

=over *

Fixed compile bug in krang_backup introduced during the addon v2
work. [Sam]

=back

=head2 v1.999

=over

=item *

Added support for a new optional DBSock directive in krang.conf that
allows Krang to connect to a local MySQL server using a
user-configurable socket file location to resolve socket-related DBI
connection errors. [David Kaufman]

=item *

Refactored Krang::Scheduler class into 
Krang::Schedule 
Krang::Schedule::Action and 
Krang::Schedule::Action::[expire|publish|...|YourClass]
Where YourClass must implement an execute method.  
This Paves the way for custom scheduler addons.  
Simply write a class that inherits from Krang::Schedule::Action and
implements an execute() method. [Aaron Dancygier]

=item *

Added conditonal Scheduler link in left nav bar under admin section 
This is for non story or media related administrative scheduler addons.
Link points to new admin scheduler screen.
Allows you to use scheduler addons in place of external scripts run
by cron.  [Aaron Dancygier]

=item *

Added support for Scheduler addon classes that are tied to story 
or media content. This will show up in current scheduler screen.
[Aaron Dancygier]

=item *

Fixed shebang line bug in /htdocs .pl registry/cgi scripts and 
Addon *.pl scripts. [Aaron Dancygier]

=item * 

Fixed hardcoded perl bug in Addon.pm install() and uninstall() 
[Aaron Dancygier]

=item * 

Added tests for admin scheduler addons in t/addon_installer.t 
[Aaron Dancygier]

=item *

Added support for centos release 4 [Ado Nishimura]

=item *

Fixed bin/krang_ctl and bin/krang_scheduled, to use Krang::ClassLoader
[Ado Nishimura]

=item *

Fixed Krang::NavigationNode documentation and xinha German localization 
file [Bodo Schulze]

=item *

Fixed compile time ordering issues with bin/krang_addon_installer,
bin/krang_addon_uninstaller, and bin/krang_load_skin